root/apps/services/qmail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: qmail, namespace: platform }
spec:
  replicas: 1
  selector: { matchLabels: { app: qmail } }
  template:
    metadata: { labels: { app: qmail } }
    spec:
      containers:
        - name: qmail
          image: rg.fr-par.scw.cloud/pandormedia/qoffice-qmail:preprod-300b02069591f7a263e05fcd954eb27cc342d750
          ports: [ { containerPort: 8080 } ]
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
